client/src/pages/ForgotPasswordPage/ForgotPasswordPage.module.css
.container {
  width: 100%;
  height: 100%;
}

.background {
  background-image: url("../../assets/welcomePage/backgroundMobileWelcomePage.svg");
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: -1;
}

.wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.title {
  font-weight: 500;
  font-size: 16px;
  line-height: 125%;
  margin-bottom: 10px;
  text-align: center;
}

.link {
  color: #407bff;
  font-size: 12px;
  margin-top: 20px;
}

.link:hover {
  color: var(--secondary-color-5);
}

/* ___________________________ TABLET _____________________*/

@media screen and (min-width: 768px) {
  .background {
    background-image: url("../../assets/welcomePage/backgroundTabletWelcomePage.svg");
    /*background-position: center 20%;
    background-size: cover;*/
  }

  .title {
    font-size: 28px;
  }

  .link {
    font-size: 16px;
  }
}

/* ___________________________ DESKTOP _____________________*/

@media screen and (min-width: 1440px) {
  .background {
    background-image: url("../../assets/welcomePage/background2DesktopWelcomePage.svg"),
      url("../../assets/welcomePage/background1DesktopWelcomePage.svg");
    /*background-size: contain, contain;
    background-position: center, center 100%;*/
  }

  .title {
    font-size: 36px;
  }

  .link {
    font-size: 20px;
  }
}

